fixed modal and layout bug

--- a/scss/_addProduct.scss
+++ b/scss/_addProduct.scss
@@ -1,6 +1,4 @@
-.add-product-box {
- width: 100%;
-}
+
 .preview-product-small {
     margin-top: 50px;
 }
